# ws-hyper

./: .gitignore  Cargo.toml  LICENSE  docker-compose.yml  init.sql
auth/: .dockerignore  .env-example  Cargo.toml  build.rs  inirdb.sql  initdb.sql  postgres-docker.sh
auth/proto/: info.proto  user.proto
auth/src/: main.rs
auth/src/grpc_v1/: mod.rs  user_control.rs
auth/src/handler/: bucket.rs  entry.rs  error.rs  login.rs  mod.rs  programas.rs  user.rs
auth/src/models/: channel.rs  mod.rs  program.rs  user.rs
auth/src/models/bucket/: mod.rs  update.rs
auth/src/models/programas/: mod.rs  update.rs
auth/src/models/user/: builder.rs  mod.rs  resourece.rs  update.rs
auth/src/repository/: mod.rs
auth/src/state/: error.rs  manager.rs  mod.rs  queries.rs  repository.rs  types.rs
directory/: Cargo.toml  build.rs  index.html  mongodb.sh
directory/macros/: Cargo.toml
directory/macros/src/: lib.rs
directory/proto/: directory.proto
directory/src/: cli.rs  main.rs  state.rs  user.rs
directory/src/actor/: mod.rs
directory/src/bucket/: bucket_map.rs  error.rs  fhs.rs  fhs_response.rs  key.rs  mod.rs  object.rs  object_entry.rs  utils.rs
directory/src/bucket/utils/: mod.rs  normalizeds.rs
directory/src/bucket/utils/rename_handlers/: builder.rs  mod.rs  types.rs
directory/src/directory/: error.rs  file.rs  mod.rs  tree_dir.rs
directory/src/grpc_v1/: mod.rs
directory/src/grpc_v1_server/: mod.rs
directory/src/handlers/: auth_layer.rs  error.rs  mod.rs
directory/src/manager/: channels_types.rs  mod.rs  new_file_tba.rs  utils.rs  watcher.rs
directory/src/manager/utils/: mod.rs  skipper.rs
directory/src/manager/watcher/: error.rs  for_dir.rs  mod.rs  parser.rs  pool_watcher.rs
directory/src/manager/watcher/event_watcher/: builder.rs  mod.rs  rename_control.rs
directory/src/manager/websocker/: mod.rs
directory/src/manager/websocket/: broker.rs  mod.rs  observer.rs  subject.rs  user_tracker.rs
directory/src/models/: mod.rs
directory/src/state/: mod.rs
directory/src/state/cache/: mod.rs
directory/src/state/local_storage/: error.rs  mod.rs  utils.rs
directory/src/state/pg_listen/: builder.rs  mod.rs
download_srv/: Cargo.toml
notify/: Cargo.toml
src/: main.rs  peer.rs  redirect.rs  repository.rs
src/handlers/: api.rs  error.rs  file.rs  mod.rs  user.rs  utils.rs
src/handlers/api_v1/: data_entry.rs  file.rs  mod.rs  user.rs
src/models/: file.rs  user.rs
src/models/logs/: mod.rs
src/stream_upload/: error.rs  mod.rs  stream.rs
upload_files/: Cargo.toml  build.rs
upload_files/src/: main.rs  repository.rs
upload_files/src/grpc_v1/: mod.rs  user_check.rs
upload_files/src/handlers/: error.rs  mod.rs  utils.rs
upload_files/src/handlers/api_v1/: data_entry.rs  file.rs  mod.rs
upload_files/src/models/: mod.rs  user.rs
upload_files/src/models/logs/: mod.rs  upload.rs
upload_files/src/stream_upload/: error.rs  mod.rs  stream.rs
utils/: Cargo.toml
utils/src/: claim.rs  lib.rs  peer.rs
utils/src/app_info/: host.rs  mod.rs
utils/src/claim/: builder.rs  mod.rs  with_metadata.rs
utils/src/connection_manager/: error.rs  manager.rs  mod.rs
utils/src/cors/: builder.rs  mod.rs
utils/src/middleware/: entry.rs  handler.rs  mod.rs  proxy_info.rs  state.rs
utils/src/middleware/cors/: builder.rs  future.rs  layer.rs  mod.rs
utils/src/middleware/log_layer/: builder.rs  future.rs  layer.rs  mod.rs
