[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
bcrypt = "0.17.0"
hyper = { version = "1.6.0", features = ["http1"] }
jsonwebtoken = "9.3.1"
prost = "0.14.1"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = "0.8.6"
time = "0.3.41"
tokio = { version = "1.45.1", features = ["full"] }
tonic = "0.13.1"
