[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
bcrypt = "0.17.0"
hyper = { version = "1.6.0", features = ["http1", "server"] }
jsonwebtoken = "9.3.1"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "time", "uuid"] }
time = "0.3.41"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
utils = { path = "../utils" }
http-body-util = "0.1.3"
serde_json = "1.0.140"
dotenv = "0.15.0"
tonic = "0.14.2"
prost = "0.14.1"
tonic-prost = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14.2"

