[package]
name = "directory"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
futures = "0.3.31"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["http1"] }
hyper-tungstenite = "0.19.0"
notify = "8.2.0"
prost = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
time = { version = "0.3.44", features = ["serde"] }
tokio = { version = "1.47.1", features = ["full"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
utils = { path = "../utils" }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[build-dependencies]
tonic-prost-build = "0.14.2"
