[package]
name = "download_srv"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
futures = "0.3.31"
http-body-util = "0.1.3"
http1 = "0.0.0"
hyper = "1.6.0"
jsonwebtoken = "9.3.1"
prost = "0.14.1"
time = "0.3.41"
tokio = { version = "1.45.1", features = ["full"] }
tonic = "0.13.1"
utils = { path = "../utils" }
