[package]
name = "upload_files"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
dotenv = "0.15.0"
futures = "0.3.31"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
jsonwebtoken = "9.3.1"
mime = "0.3.17"
mongodb = "3.2.3"
multer = "3.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tera = "1.20.0"
time = { version = "0.3.41", features = ["local-offset", "serde"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
utils = { path = "../utils" }
tonic = "0.13.1"
prost = "0.14.1"
redis = "0.32.2"
