[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = "1.6.0"
jsonwebtoken = "9.3.1"
p256 = "0.13.2"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }

[lib]
name = "utils"
path = "src/lib.rs"
